Basic CRUD functionality

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -2,25 +2,25 @@
 <html lang="en">
   <head>
     <%- include('./partials/head.ejs') %>
-    <title><%= skatepark.name %> </title>
+    <title><%= skatepark.name %></title>
   </head>
   <body>
-
-    <%- include('./partials/navbar.ejs')  %> 
+    <%- include('./partials/navbar.ejs') %>
 
     <main class="container">
-        <h1><%= skatepark.name  %> </h1>
-        <h2><%= skatepark.location %> </h2>
-        <img src="<%= skatepark.imgUrl %>" alt="">
+      <h1>Park Name: <%= skatepark.name %></h1>
+      <h2>Located: <%= skatepark.location %></h2>
+      <h2>Cost: <%= skatepark.price %></h2>
+      <img src="<%= skatepark.imgUrl %>" alt="" />
     </main>
 
-    <form action="/skatparks/<%= skatepark._id %>/edit">
-        <button class="btn btn-info">Edit Park</button>
+    <form action="/skateparks/<%= skatepark._id %>/edit">
+      <button class="btn btn-info">Edit Park</button>
     </form>
 
     <form action="/skateparks/<%= skatepark._id %>?_method=DELETE" method="POST">
-        <label for="deletePark">Delete Park</label>
-        <button class="btn btn-danger" id="deletePark">Delete Park</button>
+      <label for="deletePark">Delete Park</label>
+      <button class="btn btn-danger" id="deletePark">Delete Park</button>
     </form>
 
     <%- include('./partials/footer.ejs') %>
