adds flash messaging

--- a/views/skateparks.ejs
+++ b/views/skateparks.ejs
@@ -10,6 +10,8 @@
 
     <h1>All SkateParks</h1>
 
+    <%- include('./partials/flash.ejs') %> 
+
 <h2>SkateParks</h2>
 <% for (park of skateparks) {%>
     
