--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -8,6 +8,7 @@
     <%- include('./partials/navbar.ejs') %>
 
     <main class="container">
+      <%- include('./partials/flash.ejs')  %> 
       <h1>Park Name: <%= skatepark.name %></h1>
       <h2>Located: <%= skatepark.location %></h2>
       <h2>Cost: <%= skatepark.price %></h2>
@@ -27,7 +28,19 @@
       <button class="btn btn-info">New Review</button>
     </form>
 
-    
+    <div class="container">
+      <% for (review of skatepark.reviews) { %> 
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Rated: <%= review.rating  %> </h5>
+            <p class="card-text"><%= review.review %> </p>
+            <form action="/skateparks/<%= skatepark._id %>/review/<%= review._id %>?_method=DELETE" method="POST">
+              <button class="btn btn-sm btn-danger">Delete</button>
+            </form>        
+          </div>
+        </div>
+      <% } %> 
+    </div>
 
     <%- include('./partials/footer.ejs') %>
   </body>
