--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,7 +7,7 @@
 <body>
     <%- include('./partials/navbar.ejs')  %> 
     <h1>new park</h1>
-
+    <%- include('./partials/flash.ejs') %> 
     <!-- Form to add new park -->
     <div class="container">
         <form action="/skateparks/new" class="row g-3 needs-validation" novalidate method="POST">
