--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,14 @@
           <a class="nav-link" href="/skateparks">Skateparks</a>
           <a class="nav-link" href="/skateparks/new">New Park</a>
         </div>
+        <div class="navbar-nav ml-auto">
+          <% if (!currentUser) {%> 
+          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" href="/register">Register</a>
+          <% } else { %> 
+          <a class="nav-link" href="/logout">Logout</a>
+          <% } %> 
+        </div>
       </div>
     </div>
   </nav>
