--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -13,7 +13,10 @@
       <h2>Located: <%= skatepark.location %></h2>
       <h2>Cost: <%= skatepark.price %></h2>
       <img src="<%= skatepark.imgUrl %>" alt="" />
+      <h5>Park Uploaded By: <%= skatepark.author.username  %> </h5>
     </main>
+
+    <% if (currentUser && skatepark.author.equals(currentUser)) {%> 
 
     <form action="/skateparks/<%= skatepark._id %>/edit">
       <button class="btn btn-info">Edit Park</button>
@@ -24,19 +27,26 @@
       <button class="btn btn-danger" id="deletePark">Delete Park</button>
     </form>
 
+    <% } %> 
+
+    <% if (currentUser) { %> 
     <form action="/skateparks/<%= skatepark._id %>/review">
       <button class="btn btn-info">New Review</button>
     </form>
+    <% } %> 
 
     <div class="container">
       <% for (review of skatepark.reviews) { %> 
         <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">Rated: <%= review.rating  %> </h5>
+            <h6 class="card-subtitle mb-2 text-muted">By: <%= review.author.username  %> </h6>
             <p class="card-text"><%= review.review %> </p>
+            <% if (currentUser && review.author.equals(currentUser._id)) {%> 
             <form action="/skateparks/<%= skatepark._id %>/review/<%= review._id %>?_method=DELETE" method="POST">
               <button class="btn btn-sm btn-danger">Delete</button>
-            </form>        
+            </form>
+            <% } %>         
           </div>
         </div>
       <% } %> 
