--- a/views/newReview.ejs
+++ b/views/newReview.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <%- include('./partials/head.ejs')  %> 
+    <link rel="stylesheet" href="/stylesheets/stars.css">
     <title>New Review</title>
 </head>
 <body>
@@ -13,13 +14,20 @@
         <form action="/skateparks/<%= skatepark._id %>/review" class="row g-3 needs-validation" novalidate method="POST">
             <div class="d-flex flex-column mb-3">
 
-                  <div class="col-md-4">
-                    <label for="validationCustom02" class="form-label">Rating:</label>
-                    <input name="rating" type="range" class="form-range" id="validationCustom02" required min="1" max="5" step="0.5" >
-                    <div class="valid-feedback">
-                      Looks good!
-                    </div>
-                  </div>
+              <fieldset class="starability-basic">
+                <legend>Rating:</legend>
+                <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked aria-label="No rating." />
+                <input type="radio" id="first-rate1" name="rating" value="1" />
+                <label for="first-rate1" title="Terrible">1 star</label>
+                <input type="radio" id="first-rate2" name="rating" value="2" />
+                <label for="first-rate2" title="Not good">2 stars</label>
+                <input type="radio" id="first-rate3" name="rating" value="3" />
+                <label for="first-rate3" title="Average">3 stars</label>
+                <input type="radio" id="first-rate4" name="rating" value="4" />
+                <label for="first-rate4" title="Very good">4 stars</label>
+                <input type="radio" id="first-rate5" name="rating" value="5" />
+                <label for="first-rate5" title="Amazing">5 stars</label>
+              </fieldset>
 
                   <div class="col-md-4">
                       <label for="validationCustom02" class="form-label">Review:</label>
